add blog-post model, blog-post.json file

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,7 @@
-<h2>About ... </h2>
+<h2>We're all about British Male Actors!</h2>
 
 <p>"placeholder"</p>
 
 {{#link-to 'contact'}}Contact Us!{{/link-to}}
+<br>
+{{#link-to 'index'}}Home{{/link-to}}
