--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,1 +1,1 @@
-<li>{{blogpost.title}} by {{blogpost.author}}</li>
+<li>{{#link-to 'blogpost' blogpost.id}} {{blogpost.title}} {{/link-to}} by {{blogpost.author}}</li>
