--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,5 @@
-<h1>Welcome to Our Sweet Movie Blog About British Male Actors!</h1>
+<h3>Welcome to</h3>
+<h1>Our Sweet Movie Blog About British Male Actors!</h1>
 
 <p>Get It!</p>
 
@@ -8,5 +9,5 @@
   {{/each}}
 </ul>
 
-{{#link-to 'about'}}About{{/link-to}}
-{{#link-to 'contact'}}Contact Us{{/link-to}}
+<!-- {{#link-to 'about'}}About{{/link-to}}
+{{#link-to 'contact'}}Contact Us{{/link-to}} -->
