--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,7 @@
 
 <ul>
   {{#each model as |blogpost|}}
-    {{post-tile blogpost=blogpost}}
+    {{post-tile blogpost=blogpost destroyBlogpost="destroyBlogpost"}}
   {{/each}}
 </ul>
 
