add save function for adding blog posts

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,5 +9,7 @@
   {{/each}}
 </ul>
 
+{{new-blogpost save="save"}}
+
 <!-- {{#link-to 'about'}}About{{/link-to}}
 {{#link-to 'contact'}}Contact Us{{/link-to}} -->
