Add custom styles.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,7 +1,7 @@
 <h2>We're all about British Male Actors!</h2>
 
-<p>"placeholder"</p>
+<p>Find out about the movies they star in, why we like them, and if they're hot!</p>
 
-{{#link-to 'contact'}}Contact Us!{{/link-to}}
+<!-- {{#link-to 'contact'}}Contact Us!{{/link-to}}
 <br>
-{{#link-to 'index'}}Home{{/link-to}}
+{{#link-to 'index'}}Home{{/link-to}} -->
