--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,1 +1,1 @@
-<li>{{#link-to 'blogpost' blogpost.id}} {{blogpost.title}} {{/link-to}} by {{blogpost.author}} {{update-blogpost blogpost=blogpost update="update"}} <span {{action 'delete' blogpost}}>x</span></li>
+<li>{{#link-to 'blogpost' blogpost.id}} {{blogpost.title}} {{/link-to}} by {{blogpost.author}} {{update-blogpost blogpost=blogpost update="update"}} <span class="clickable text-danger" {{action 'delete' blogpost}}>x</span></li>
