--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,12 @@
 <p>Contact us at: </p>
 
-<p>Find out what we're {{#link-to 'about'}}about.{{/link-to}}</p>
+<h3>HQ</h3>
 
-{{#link-to 'index'}}Home{{/link-to}}
+<address>
+PO Box 1234<br>
+Portland, OR 97214<br>
+
+<a href="mailto:someplace@world.com">someplace@world.com</a>
+</address>
+<!-- <p>Find out what we're {{#link-to 'about'}}about.{{/link-to}}</p>
+{{#link-to 'index'}}Home{{/link-to}} -->
