--- a/app/templates/components/update-blogpost.hbs
+++ b/app/templates/components/update-blogpost.hbs
@@ -21,5 +21,5 @@
     </form>
   </div>
 {{else}}
-  <span {{action 'updateBlogpostForm'}}>Update</span>
+  <span class="clickable text-success" {{action 'updateBlogpostForm'}}>Update</span>
 {{/if}}
