adds a comment delete function

--- a/app/templates/components/comment-tile.hbs
+++ b/app/templates/components/comment-tile.hbs
@@ -1,4 +1,4 @@
-<li>{{comment.author}} {{comment.date}} {{comment.content}}</li>
+<li>{{comment.author}} {{comment.date}} {{comment.content}}<span class="clickable text-danger" {{action 'delete' comment}}>x</span></li>
 
 
 <!-- <li>{{'comment' comment.id}} {{comment.content}}</li> -->
