--- a/app/templates/blogpost.hbs
+++ b/app/templates/blogpost.hbs
@@ -5,7 +5,7 @@
 
 <ul>
   {{#each model.blogpost.comments as |comment|}}
-    {{comment-tile comment=comment}}
+    {{comment-tile comment=comment destroyComment="destroyComment"}}
   {{/each}}
 </ul>
 
